<resources>
    <string name="app_name">MagicCards</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to cartas_fila -->
    <string name="altImage">Image card place</string>

    <!-- Strings related to CARD Settings -->

    <!-- Common, Uncommon, Rare, Mythic Rare, Special, Basic Land-->
    <string name="card_settings">Card Settings</string>

    <string name="card_settings_section_rarity">RARITIES</string>

    <string name="rarity_settings">Choose rarity</string>
    <string-array name="rarity_names">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Mythic Rare</item>
        <item>Special</item>
        <item>Basic Land</item>
    </string-array>
    <string-array name="rarity_values">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Mythic Rare</item>
        <item>Special</item>
        <item>Basic Land</item>
    </string-array>
    <string-array name="defaults">
        <item>Common</item>
    </string-array>

    <!--colors -->
    <string name="card_settings_section_colors">COLORS</string>

    <string name="color_settings">Choose color</string>
    <string-array name="color_names">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Colorless</item>
        <item>Azorius (White, Blue)</item>
        <item>Dimir (Blue, Black)</item>
        <item>Rakdos (Black, Red)</item>
        <item>Gruul (Red, Green)</item>
        <item>Selesnya (Green, White)</item>
        <item>Orzhov (White, Black)</item>
        <item>Izzet (Blue, Red)</item>
        <item>Golgari (Black, Green)</item>
        <item>Boros (Red, White)</item>
        <item>Simic (Green, Blue)</item>
        <item>Bant (Green, White, Blue)</item>
        <item>Esper (White, Blue, Black)</item>
        <item>Grixis (Blue, Black, Red)</item>
        <item>Jund (Black, Red, Green)</item>
        <item>Naya (Red, Green, White)</item>
        <item>Abzan (White, Black, Green)</item>
        <item>Jeskai (Blue, Red, White)</item>
        <item>Sultai (Black, Green, Blue)</item>
        <item>Mardu (Red, White, Black)</item>
        <item>Temur (Green, Blue, Red)</item>
        <item>Glint (Blue, Black, Red, Green)</item>
        <item>Yore (White, Blue, Black, Red)</item>
        <item>Ink (White, Blue, Red, Green)</item>
        <item>Dune (White, Black, Red, Green)</item>
        <item>Witch(White Blue Black Green)</item>
        <item>WUBRG (White, Blue, Black, Red, Green)</item>
    </string-array>
    <string-array name="color_values">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Colorless</item>
        <item>White Blue</item>
        <item>Blue Black</item>
        <item>Black Red</item>
        <item>Red Green</item>
        <item>White Green</item>
        <item>White Black</item>
        <item>Blue Red</item>
        <item>Black Green</item>
        <item>White Red</item>
        <item>Blue Green</item>
        <item>White Blue Green</item>
        <item>White Blue Black</item>
        <item>Blue Black Red</item>
        <item>Black Red Green</item>
        <item>White Red Green</item>
        <item>White Black Green</item>
        <item>White Blue Red</item>
        <item>Blue Black Green</item>
        <item>White Black Red</item>
        <item>Blue Red Green</item>
        <item>Blue Black Red Green</item>
        <item>White Blue Black Red</item>
        <item>White Blue Red Green</item>
        <item>White Black Red Green</item>
        <item>White Blue Black Green</item>
        <item>White Blue Black Red Green</item>
    </string-array>
    <string-array name="color_defaults">
        <item>White</item>
    </string-array>

    <!-- Query by keyWord -->
    <string name="edit_text_category">CARDS FINDER</string>
    <string name="custom_search">Make Your Query</string>
    <string name="dialog_title">Use any identifying word or sentence</string>
    <string name="edit_text_hint">Ex using card name: Wall of Stones</string>
    <!--       android:title="@string/edit_text_category" />
    <EditTextPreference
        android:key="word"
        android:title="@string/custom_search"
        android:persistent="true"
        android:dialogTitle="@string/dialog_title"
        android:dialogMessage="@string/dialog_message"
        android:defaultValue="" />  -->
    <!--
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
-->
    <!--Dabase Cards Settings -->
    <string name="table_cards_settings">DATABASE CARDS SETTINGS</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
