<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="com.pau.a14270729b.magiccards.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="com.pau.a14270729b.magiccards.SettingsActivity$AppCardSettings"
        android:icon="@drawable/card_settings"
        android:title="@string/card_settings" />

    <header
        android:fragment="com.pau.a14270729b.magiccards.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.pau.a14270729b.magiccards.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
